<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.khronos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.khronos.ui.tasks.TasksFragment"
        android:label="@string/tasks_title"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.khronos.ui.calendar.CalendarFragment"
        android:label="@string/calendar_title"
        tools:layout="@layout/fragment_calendar" />
</navigation>